# fably

./: .gitattributes  .gitignore  DEVELOPMENT.md  DOCUMENTATION.md  GEMINI.md  HARDWARE_SETUP.md  README.md  SETUP.md  WAKEWORD_GPIO.md  audio-tools.sh  context.md  debug_fably.sh  dev-tools.sh  diagnose_iqaudio.py  diagnose_iqaudio_specific.py  env.example  fably-setup.sh  fably-web.service  fably_diagnostics.py  fably_localization.py  fably_memory_optimization.md  fix_iqaudio_codec.sh  fix_rpi_audio.sh  generate_turkish_sounds.sh  install_web_deps.sh  pyproject.toml  quick_fix_iqaudio.sh  rpi5_fix.sh  setup.py  setup.sh  system-fixes.sh  test_enhanced_app.py  test_fably.sh  test_query_guard_removal.py  tests.py
.llm-context/: .gitignore
_archived_fixes/: css_dark_theme.py  fix_api_endpoints.py  fix_dark_theme.py  launch_dark_theme.py  patch_dark_theme.py  simple_dark_patch.py
docs/: audio_quality_guide.md  feature_integration_guide.md  story_continuation_guide.md
fably/: cli.py  cli.py.backup  continuation_prompt.txt  cross_platform.py  fably.py  prompt.txt  tts_service.py  utils.py  voice_manager.py  wakeword.py
fably/scripts/: generate_20_stories.py
fably/sounds/: calibrating_text.txt  instructions_wakeword_text.txt
fably/stories/story_1/: info.yaml
fably/stories/story_10/: info.yaml
fably/stories/story_11/: info.yaml
fably/stories/story_12/: info.yaml
fably/stories/story_13/: info.yaml
fably/stories/story_14/: info.yaml
fably/stories/story_15/: info.yaml
fably/stories/story_16/: info.yaml
fably/stories/story_17/: info.yaml
fably/stories/story_18/: info.yaml
fably/stories/story_19/: info.yaml
fably/stories/story_2/: info.yaml
fably/stories/story_20/: info.yaml
fably/stories/story_3/: info.yaml
fably/stories/story_4/: info.yaml
fably/stories/story_5/: info.yaml
fably/stories/story_6/: info.yaml
fably/stories/story_7/: info.yaml
fably/stories/story_8/: info.yaml
fably/stories/story_9/: info.yaml
tools/: button_play_leds.py  cycle_leds.py  mic_spectrogram.py  rotate_leds.py
tools/gradio_app/: README_ENHANCED.md  enhanced_app.py  enhanced_app_dark_theme.py  enhanced_app_localized.py  enhanced_app_unified.py  requirements.txt  run_enhanced.bat  run_enhanced.sh
tools/gradio_app/_deprecated/: enhanced_app.py  enhanced_app_localized.py
web_interface/: README.md  app.py  app_header_with_css.py  css_injection.py  custom_theme.css  launch.py  localization.py  requirements.txt
